Changelog
---------

v5.6.0:
 SportsTracker changes:
  - Findbugs bugfixes in all modules (minor code improvements)

v5.5.0:
 ExerciseViewer changes:
  - Bugfix in the Timex PWX exercise parser (occurs e.g. on Timex Ironman GPS 
    T5K444 after installing a firmware update)
 SportsTracker changes:
  - update of JDOM library from version 1.1.3 to 2.0.1, (API changes)
    - supports generics now, unchecked-warnings doesn't need to be suppressed 
      anymore
  - Maven project in Eclipse IDE: ignoring the maven-dependency-plugin in the
    Eclipse lifecycle => no more error messages
  - exclusion of Java WebStart (javaws.jar) dependency in BSAF, so Maven build
    now works for JDK 7 on Mac OS X
  - all Dialogs are now always placed centered relative to their parent 
    windows (doesn't make sense to restore the previous position when the 
    parent has been moved)
  - Bugfix for Mac OS X: all Dialogs were always placed in upper left corner
    now centered relative to their parents
  - Toolbars in Mac OS X: 
    - all buttons are now displayed in OS X toolbar style
    - rollover effects in Calendar view are disabled
  - Ant script for Mac OS X App bundle creation (located in misc/appbundler)
  - New HiRes SportsTracker application icon, old LowRes icon looked ugly in
    larger toolbars or application switchers (mostly on Mac OS X, Windows 7)
  - SportsTracker icon is available in many sizes, it's needed for different
    window and dock sizes depending on the operating system and user settings
    (automatic scaling looks ugly)
  - Execise file existence check after application startup. A warning dialog 
    displays all exercises where the attached files can't be found.
  - Toolbars: no focus painted for buttons anymore, was strange behavior  
  - updated signature keys for Java Webstart installation (old keys will 
    expire in 2013)

v5.4.0:
 SportsTracker changes:
  - switch to Java 7 compiler, so new language features can be used