@@ -4,6 +4,9 @@ Changelog
 v5.6.0:
  SportsTracker changes:
   - Findbugs bugfixes in all modules (minor code improvements)
+ ExerciseViewer changes:
+  - Garmin TCX Parser: Fix for SourceForge-Bug #3551583 
+    (Fail to parse tcx files with laps without altitude)
 
 v5.5.0:
  ExerciseViewer changes:
